--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -7,7 +7,7 @@
   "app.intro.download": "Скачать",
   "app.content": "Ссылка на резюме",
   "app.about.aboutme": "О себе",
-  "app.about.desc": "Меня зовут Фарход, возраст: 24 года, Разработка для меня и работа, и хобби, поэтому даже вне работы я занимаюсь разработкой. Я планирую стать Full Stack Middle Developer через 2 года.",
+  "app.about.desc": "Меня зовут Фарход, возраст: {{age}} года, Разработка для меня и работа, и хобби, поэтому даже вне работы я занимаюсь разработкой. Я планирую стать Full Stack Middle Developer через 2 года.",
   "app.portfolio.works": "Мои работы",
   "app.portfolio.more": "Подробнее",
   "app.footer.desc": "Оставайтесь на связи со мной в социальных сетях:"
