delete 3 files and update 7 files

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,7 +14,7 @@
   "app.header.portfolio": "Portfolio",
   "app.intro.download": "Download",
   "app.about.aboutme": "About me",
-  "app.about.desc": "My name is Farhod, age: {{age}} Development for me is both a job and a hobby, so even outside of work I do development. I plan to become a Full Stack Middle Developer in 2 years.",
+  "app.about.desc": "My name is Farhod, age: 24 Development for me is both a job and a hobby, so even outside of work I do development. I plan to become a Full Stack Middle Developer in 2 years.",
   "app.portfolio.works": "My works",
   "app.portfolio.more": "More",
   "app.footer.desc": "Keep in touch with me on social media:"
