--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -14,7 +14,7 @@
   "app.intro.download": "Yuklab olish",
   "app.content": "Rezume uchun link",
   "app.about.aboutme": "Men haqimda",
-  "app.about.desc": "Mening ismim Farhod, yosh: {{age}}, Rivojlanish men uchun ham ish, ham sevimli mashg'ulot, shuning uchun ishdan tashqarida ham rivojlanish bilan shug'ullanaman. Men 2 yil ichida Full Stack Middle Developer bo'lishni rejalashtirmoqdaman.",
+  "app.about.desc": "Mening ismim Farhod, yosh: 24, Rivojlanish men uchun ham ish, ham sevimli mashg'ulot, shuning uchun ishdan tashqarida ham rivojlanish bilan shug'ullanaman. Men 2 yil ichida Full Stack Middle Developer bo'lishni rejalashtirmoqdaman.",
   "app.portfolio.works": "Mening ishlarim",
   "app.portfolio.more": "Ko'proq",
   "app.footer.desc": "Ijtimoiy tarmoqlarda men bilan bog'laning:"
