chore: update en.json, ru.json and uz.json

--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -14,7 +14,7 @@
   "app.intro.download": "Скачать",
   "app.content": "Ссылка на резюме",
   "app.about.aboutme": "О себе",
-  "app.about.desc": "Меня зовут Фарход, возраст: 24 года, Разработка для меня и работа, и хобби, поэтому даже вне работы я занимаюсь разработкой. Я планирую стать Full Stack Middle Developer через 2 года.",
+  "app.about.desc": "Привет! Меня зовут Фарход, я Front-end разработчик с опытом работы более 2 лет. Владею языками HTML, CSS, JavaScript, а также фреймворка React. Работал в проектах для компаний, таких как Start-Rise и Tech-Data-Soft. Люблю создавать красивые и функциональные интерфейсы, которые помогают улучшать жизнь пользователей. Буду рад сотрудничеству и новым проектам!",
   "app.portfolio.works": "Мои работы",
   "app.portfolio.more": "Подробнее",
   "app.footer.desc": "Оставайтесь на связи со мной в социальных сетях:"
