--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,7 +14,7 @@
   "app.header.portfolio": "Portfolio",
   "app.intro.download": "Download",
   "app.about.aboutme": "About me",
-  "app.about.desc": "My name is Farhod, age: 24 Development for me is both a job and a hobby, so even outside of work I do development. I plan to become a Full Stack Middle Developer in 2 years.",
+  "app.about.desc": "Hi! My name is Farkhod, I am a Front-end developer with more than 2 years of experience. I speak HTML, CSS, JavaScript, and React frameworks. Worked in projects for companies such as Start-Rise and Tech-Data-Soft. I like to create beautiful and functional interfaces that help improve the lives of users. I will be glad to cooperate and new projects!",
   "app.portfolio.works": "My works",
   "app.portfolio.more": "More",
   "app.footer.desc": "Keep in touch with me on social media:"
