--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -14,7 +14,7 @@
   "app.intro.download": "Yuklab olish",
   "app.content": "Rezume uchun link",
   "app.about.aboutme": "Men haqimda",
-  "app.about.desc": "Mening ismim Farhod, yosh: 24, Rivojlanish men uchun ham ish, ham sevimli mashg'ulot, shuning uchun ishdan tashqarida ham rivojlanish bilan shug'ullanaman. Men 2 yil ichida Full Stack Middle Developer bo'lishni rejalashtirmoqdaman.",
+  "app.about.desc": "Salom! Mening ismim Farhod, men 2 yildan ortiq tajribaga ega front-end dasturchisiman. Men HTML, CSS, JavaScript tillarini, shuningdek React ramkalarini bilaman. Start Rise va Tech-Data-Soft kabi kompaniyalar uchun loyihalarda ishlagan. Foydalanuvchilarning hayotini yaxshilashga yordam beradigan chiroyli va funktsional interfeyslarni yaratishni yaxshi ko'raman. Hamkorlik va yangi loyihalardan xursand bo'laman!",
   "app.portfolio.works": "Mening ishlarim",
   "app.portfolio.more": "Ko'proq",
   "app.footer.desc": "Ijtimoiy tarmoqlarda men bilan bog'laning:"
