--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -17,5 +17,6 @@
   "app.about.desc": "Привет! Меня зовут Фарход, я Front-end разработчик с опытом работы более 2 лет. Владею языками HTML, CSS, JavaScript, а также фреймворка React. Работал в проектах для компаний, таких как Start-Rise и Tech-Data-Soft. Люблю создавать красивые и функциональные интерфейсы, которые помогают улучшать жизнь пользователей. Буду рад сотрудничеству и новым проектам!",
   "app.portfolio.works": "Мои работы",
   "app.portfolio.more": "Подробнее",
-  "app.footer.desc": "Оставайтесь на связи со мной в социальных сетях:"
+  "app.footer.desc": "Оставайтесь на связи со мной в социальных сетях:",
+  "app.tlg.msg" : "Привет Фарход"
 }
