--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -17,5 +17,6 @@
   "app.about.desc": "Salom! Mening ismim Farhod, men 2 yildan ortiq tajribaga ega front-end dasturchisiman. Men HTML, CSS, JavaScript tillarini, shuningdek React ramkalarini bilaman. Start Rise va Tech-Data-Soft kabi kompaniyalar uchun loyihalarda ishlagan. Foydalanuvchilarning hayotini yaxshilashga yordam beradigan chiroyli va funktsional interfeyslarni yaratishni yaxshi ko'raman. Hamkorlik va yangi loyihalardan xursand bo'laman!",
   "app.portfolio.works": "Mening ishlarim",
   "app.portfolio.more": "Ko'proq",
-  "app.footer.desc": "Ijtimoiy tarmoqlarda men bilan bog'laning:"
+  "app.footer.desc": "Ijtimoiy tarmoqlarda men bilan bog'laning:",
+  "app.tlg.msg" : "Salom Farhod"
 }
